gccida/c3/store_init_value
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4853:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4855:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4857:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4875:19: error: expected expression
v6 = ( tree_node *)v5; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4875:8: error: use of undeclared identifier 'tree_node'
v6 = ( tree_node *)v5; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4884:95: error: expected expression
if ( *( ( _BYTE *)&type->block.common + 16) == 18 && !type->int_cst.rtl && v6 != ( tree_node *)global_trees ) 
                                                                                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4884:84: error: use of undeclared identifier 'tree_node'
if ( *( ( _BYTE *)&type->block.common + 16) == 18 && !type->int_cst.rtl && v6 != ( tree_node *)global_trees ) 
                                                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4891:21: error: expected expression
v8 = *( tree_node **)( v7->int_cst.int_cst.low + 32); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/c-typeck.c:4891:9: error: use of undeclared identifier 'tree_node'
v8 = *( tree_node **)( v7->int_cst.int_cst.low + 32); 
        ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_init_value/src/obj/c-typeck.o] Error 1
